// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tokenize > <p>foo <em>bar</em> baz</p> 1`] = `
<p
  id="p1"
>
  <span
    class="jsed-token"
  >
    foo
  </span>
  <em
    style="display:inline;"
  >
    <span
      class="jsed-token"
    >
      bar
    </span>
  </em>
  <span
    class="jsed-token"
  >
    baz
  </span>
</p>
`;

exports[`tokenizeImplicitLine > case 1 - simple 1`] = `
<div
  id="div1"
>
  <p
    id="p1"
  >
    foo 
    <em
      style="display:inline;"
    >
      bar
    </em>
     baz
  </p>
  <span
    class="jsed-implicit-line"
  >
    this is the implicit line
  </span>
</div>
`;

exports[`tokenizeImplicitLine > case 2 - implicit line with nested inline tag 1`] = `
<div
  id="div1"
>
  <p
    id="p1"
  >
    foo 
    <em
      style="display:inline;"
    >
      bar
    </em>
     baz
  </p>
  <span
    class="jsed-implicit-line"
  >
    this is the 
    <em
      id="em2"
      style="display:inline;"
    >
      implicit
    </em>
     line
  </span>
</div>
`;

exports[`tokenizeImplicitLine > case 3 - leaded nested inline tag 1`] = `
<div
  id="div1"
>
  <p
    id="p1"
  >
    foo 
    <em
      style="display:inline;"
    >
      bar
    </em>
     baz
  </p>
  <span
    class="jsed-implicit-line"
  >
    <em
      id="em2"
      style="display:inline;"
    >
      implicit
    </em>
     line
  </span>
</div>
`;
